# TekstRPG-2-Electric-Boogaloo

./: .gitignore  BearLibTerminal.ini  CMakeLists.txt  config.ini  main.cpp  readme.md
Header Files/: BaseEntity.h  BigString.h  CharacterSelectionState.h  CombatState.h  EnemyContext.h  Entities.h  EntitySprites.h  ExplorationState.h  GameContext.h  GameUtility.h  IState.h  Map.h  MenuState.h  SetThemeState.h  SettingData.h  SettingsState.h  State.h  StateMachine.h  StatusEffects.h  Themes.h  ViewControlsState.h
Resource Files/: Room_Test.xp
ResourceFiles/Fonts/: infoPixelAzureBonds.txt
ResourceFiles/Maps/: OverWorld1.xp
Source Files/: BaseEntity.cpp  CharacterSelectionState.cpp  CombatState.cpp  Entities.cpp  EntitySprites.cpp  ExplorationState.cpp  GameContext.cpp  GameUtility.cpp  Map.cpp  MenuState.cpp  SetThemeState.cpp  SettingData.cpp  SettingsState.cpp  StatusEffects.cpp  Themes.cpp  ViewControlsState.cpp  main.cpp
